
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LC_COLLATE ;
 int SIZE ;
 char* malloc (int) ;
 int memset (char*,char,int) ;
 int printf (char*,int) ;
 int puts (char*) ;
 int * setlocale (int ,char*) ;
 int strcoll (char*,char*) ;

int
main (void)
{
  char *p = malloc (1 + SIZE);
  if (setlocale (LC_COLLATE, "en_GB.UTF-8") == ((void*)0))
    {
      puts ("setlocale failed, cannot test for overflow");
      return 0;
    }
  if (p == ((void*)0))
    {
      puts ("malloc failed, cannot test for overflow");
      return 0;
    }
  memset (p, 'x', SIZE);
  p[SIZE] = 0;
  printf ("%d\n", strcoll (p, p));
  return 0;
}
