; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_37783.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_37783.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIZE = common dso_local global i32 0, align 4
@LC_COLLATE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"en_GB.UTF-8\00", align 1
@.str.1 = private unnamed_addr constant [43 x i8] c"setlocale failed, cannot test for overflow\00", align 1
@.str.2 = private unnamed_addr constant [40 x i8] c"malloc failed, cannot test for overflow\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  store i32 0, i32* %1, align 4
  %3 = load i32, i32* @SIZE, align 4
  %4 = add nsw i32 1, %3
  %5 = call i8* @malloc(i32 %4)
  store i8* %5, i8** %2, align 8
  %6 = load i32, i32* @LC_COLLATE, align 4
  %7 = call i32* @setlocale(i32 %6, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %0
  %10 = call i32 @puts(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %28

11:                                               ; preds = %0
  %12 = load i8*, i8** %2, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %11
  %15 = call i32 @puts(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %28

16:                                               ; preds = %11
  %17 = load i8*, i8** %2, align 8
  %18 = load i32, i32* @SIZE, align 4
  %19 = call i32 @memset(i8* %17, i8 signext 120, i32 %18)
  %20 = load i8*, i8** %2, align 8
  %21 = load i32, i32* @SIZE, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i8, i8* %20, i64 %22
  store i8 0, i8* %23, align 1
  %24 = load i8*, i8** %2, align 8
  %25 = load i8*, i8** %2, align 8
  %26 = call i32 @strcoll(i8* %24, i8* %25)
  %27 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i32 %26)
  store i32 0, i32* %1, align 4
  br label %28

28:                                               ; preds = %16, %14, %9
  %29 = load i32, i32* %1, align 4
  ret i32 %29
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32* @setlocale(i32, i8*) #1

declare dso_local i32 @puts(i8*) #1

declare dso_local i32 @memset(i8*, i8 signext, i32) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @strcoll(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
